--- a/index.html
+++ b/index.html
@@ -143,42 +143,43 @@
             </div>
             <div class="swiper-slide slide5">
                 <div class="slide5Bg"></div>
-                <img src="images/ls5_1.png" alt="" class="leftImg">
-                <div class="titles">
-                    <h4>主要项目</h4>
-                </div>
-                <div class="workList">
-                    <h6>大学长</h6>
-                    <p>
-                        含大学长与大学通两个网站<br>
-                        模块有:1.大学长介绍、新闻、合作机构、学长帮及学长直播;2.大学展示、通知书展示、新闻活动、我们的故事、金吉列留学服务
-                    </p>
-                </div>
-                <div class="workList">
-                    <h6>别克城市站</h6>
-                    <p>
-                        项目包含PC端及移动端 <br>
-                        包含品牌车介绍、经销商介绍、查询、活动
-                        、导购等等功能。应用到ajax获取并解析展示
-                        数据、调取百度api文档实现地图功能
-                    </p>
-                </div>
-                <div class="workList">
-                    <h6>日产、斯柯达</h6>
-                    <p>
-                        负责:官网制作及日常维护 <br>
-                        含:斯柯达车友汇、社区及日产每年车展minisite,日产俱乐部等等
-                    </p>
-                </div>
-                <div class="workList">
-                    <h6>veedou</h6>
-                    <p>
-                        该项目是一个网络社交名片，汇聚微博、开心、人人等主流社交网站
-                    </p>
+                <div class="slide5Main">
+                    <img src="images/ls5_1.png" alt="" class="leftImg">
+                    <div class="titles">
+                        <h4>主要项目</h4>
+                    </div>
+                    <div class="workList">
+                        <h6>大学长</h6>
+                        <p>
+                            含大学长与大学通两个网站<br>
+                            模块有:1.大学长介绍、新闻、合作机构、学长帮及学长直播;2.大学展示、通知书展示、新闻活动、我们的故事、金吉列留学服务
+                        </p>
+                    </div>
+                    <div class="workList">
+                        <h6>别克城市站</h6>
+                        <p>
+                            项目包含PC端及移动端 <br>
+                            包含品牌车介绍、经销商介绍、查询、活动
+                            、导购等等功能。应用到ajax获取并解析展示
+                            数据、调取百度api文档实现地图功能
+                        </p>
+                    </div>
+                    <div class="workList">
+                        <h6>日产、斯柯达</h6>
+                        <p>
+                            负责:官网制作及日常维护 <br>
+                            含:斯柯达车友汇、社区及日产每年车展minisite,日产俱乐部等等
+                        </p>
+                    </div>
+                    <div class="workList">
+                        <h6>veedou</h6>
+                        <p>
+                            该项目是一个网络社交名片，汇聚微博、开心、人人等主流社交网站
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="swiper-slide slide6">
-                <div class="silde6Bg"></div>
                 <h3>作品展示<em>show time</em></h3>
                 <div class="showImg">
                     <img src="images/showImg/img5.png" alt="" style="width: 6.36rem">
